DTO comment